    - Removed /ERM_levelup command
    - Change AttackGroupProcessor to generate a group in 20 seconds regardless of the group size, instead of 5 units/s
    - replace land-mine stunt effect with 50% movement speed.
    - Added 3 and 4 to "Attack group forming interval"  option list.  Default changed from 5 mins to 3 mins

  Bugfixes:
    - Fix a crash when unsupported enemies try to level up.
    - Fix a crash in attack_group_chunk_processor when spawnable_chunk index is nil for a surface


---------------------------------------------------------------------------------------------------
Version: 1.9.3
Date: 2021-11-07

  Bugfixes:
    - Fixed a crash in attack_group_chunk_processor when attackable_chunk index is nil for a surface

---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 2021-10-27

  Bugfixes:
    - Fixed an issue which custom attack group only spawn at first SE attackable planet.

---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2021-10-23

  Bugfixes:
    - Disable debug mode XD

---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 2021-10-23

  Features:
    - Custom attack group can now spawn in Space Exploration planets!
    - Custom attack group is now out of beta.
    - Enemy running/flying speed can now adjustable in startup setting.
    - Added a detailed window to show race's additional information and adjustment
    - Added total units and structures kill count to detailed window
    - Enemy level can be overide in detail UI window.

  Changes:
    - Added default values to setting tooltips
    - Add remote function to generate dropship attack group
    - Significantly lower level up evolution points to { 10, 20, 35, 50, 65, 80, 100, 150, 200, 250, 300, 400, 500, 650, 800, 1000, 1250 }

  Bugfixes: